--- a/bower.json
+++ b/bower.json
@@ -3,11 +3,13 @@
   "version": "0.0.1",
   "dependencies": {
     "font-awesome": "4.3.0",
+    "jquery-ui": ">=1.9",
     "angular": "1.3.10",
     "angular-resource": "1.3.10",
     "angular-sanitize": "1.3.10",
     "bootstrap": "3.3.2",
     "angular-ui-router": "0.2.13",
+    "angular-ui-sortable": "0.13.4",
     "angular-bootstrap": "0.12.0",
     "angular-local-storage": "0.1.5",
     "angular-elastic": "2.4.2",
