--- a/bower.json
+++ b/bower.json
@@ -14,7 +14,8 @@
     "angular-local-storage": "0.1.5",
     "angular-elastic": "2.4.2",
     "angular-moment": "0.9.0",
-    "angular-cache": "3.2.5"
+    "angular-cache": "3.2.5",
+    "ng-sortable": "1.3.0"
   },
   "devDependencies": {
     "angular-mocks": "1.3.10",
