--- a/bower.json
+++ b/bower.json
@@ -14,6 +14,8 @@
     "angular-moment": "0.9.0",
     "angular-cache": "3.2.5",
     "angularjs-viewhead": "0.0.1"
+    "marked": "0.3.4",
+    "highlightjs": "8.4"
   },
   "devDependencies": {
     "angular-mocks": "1.3.10",
