--- a/bower.json
+++ b/bower.json
@@ -15,9 +15,9 @@
     "angular-elastic": "2.4.2",
     "angular-moment": "0.9.0",
     "angular-cache": "3.2.5",
-    "angularjs-viewhead": "0.0.1"
+    "angularjs-viewhead": "0.0.1",
     "marked": "0.3.4",
-    "highlightjs": "8.4"
+    "highlightjs": "8.4",
     "ng-sortable": "1.3.0"
   },
   "devDependencies": {
